--- a/p_django/day00/ex03/copy.html
+++ b/p_django/day00/ex03/copy.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<style>
-		</style>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<div>
 			<li><h2>Frontend</h2>
 				<p data-value=80>HTMLS</p>
-				<progress class="progress-bar html5" value=80 max="100"> </progress>
+				<progress class="html5" value=80 max="100"> </progress>
 				<p data-value=60>CSS3</p>
-				<progress class="progress-bar css3" value=60 max="100"> </progress>
+				<progress class="css3" value=60 max="100"> </progress>
 				<p data-value=50>jQuery</p>
-				<progress class="progress-bar jquery" value=50 max="100"> </progress>
+				<progress class="jquery" value=50 max="100"> </progress>
 			</li>
 			<h2>Backend</h2>
 			<li>
 				<p data-value=75>Python</p>
-				<progress class="progress-bar python" value=75 max="100"> </progress>
+				<progress class="python" value=75 max="100"> </progress>
 				<p data-value=65>PHP</p>
-				<progress class="progress-bar php" value=65 max="100"> </progress>
+				<progress class="php" value=65 max="100"> </progress>
 				<p data-value=35>Node.js</p>
-				<progress class="progress-bar node-js" value=35 max="100"> </progress>
+				<progress class="node-js" value=35 max="100"> </progress>
 			</li>
 		</div>
 	</body>
