--- a/p_django/day00/ex02/form.html
+++ b/p_django/day00/ex02/form.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>
-			ex02
-		</title>
+		<title>ex02</title>
 		<script src="popup.js"></script>
 	</head>
 	<body>
 		<form onsubmit="return false;">
 			<div>
-				<label for="fristname">Firstname : </label>
+				<label for="firstname">Firstname : </label>
 				<input type="text" id="firstname" required="required" />
 			</div>
 			<div>
@@ -26,7 +24,7 @@
 			</div>
 			<div>
 				<label for="email">Email : </label>
-				<input type="email" id="email" ng-model="mail"/>
+				<input type="email" id="email" required="required"/>
 			</div>
 			<div>
 				<label for="student">Student at 42? :</label>
