--- a/p_django/day00/ex04/snippets.html
+++ b/p_django/day00/ex04/snippets.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <title>ex04</title>
     <script src="file4.js"></script>
     <script src="file1.js"></script>
     <script src="file3.js"></script>
