--- a/p_django/day0/ex04/snippets.html
+++ b/p_django/day0/ex04/snippets.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
     <title>ex04</title>
     <script src="file4.js"></script>
     <script src="file1.js"></script>
